flux/apps/base/oauth2-proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: oauth2-proxy
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    prometheus.io/scrape: "true"
