flux/apps/base/oauth2-proxy/ingress-analbeard-com.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy-analbeard-com
  namespace: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
  - host: ${OAUTH2_PROXY_SUBDOMAIN}.${OAUTH2_PROXY_ANALBEARD_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy-analbeard-com
            port:
              number: 80
  tls:
  - hosts:
    - ${OAUTH2_PROXY_SUBDOMAIN}.${OAUTH2_PROXY_ANALBEARD_DOMAIN}
    secretName: oauth2-proxy-analbeard-com-tls
